# stockwatch

./: .env.example  .gitignore  README.md  pyproject.toml
config/: tables.yml
deploy/: README.md
deploy/n8n/: .env.example  Dockerfile  README.md  docker-compose.yml  stockwatch-nightly-snapshot.json
deploy/windows/: README.md  register-task.ps1  snapshot.ps1
src/isync_inventory/: __init__.py  cli.py  db.py  explain.py
src/stockwatch/: analysis.py  baseline.py  cli.py  config.py  dashboard.py  db.py  flow.py  introspect.py  queries.py
tests/: test_analysis.py  test_baseline.py  test_dashboard.py  test_db.py  test_flow.py  test_introspect.py  test_queries_and_explain.py
