[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stockwatch"
version = "0.1.0"
description = "StockWatch: analyze and explain inventory movements from iSync (MS SQL): FG/RM movements, WIP/FG/RM balances."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "pyodbc>=5.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
stockwatch = "stockwatch.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
